--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,10 +1,15 @@
-<ul>
-    <li (click) = "selectMenu('Mentions')"
+<ul fxLayout="column" fxLayoutAlign="start center" fxLayout.gt-xs="row"  fxLayoutAlign.gt-xs="space-around center">
+    <!-- <li (click) = "selectMenu('Mentions')"
       [style.color]="menuService.selectedMenu == 'mentions' ? 'red' : 'blue'">
-      Mentions
+      Mentions légales
       </li>
     <li (click) = "selectMenu('Contributeurs')"
       [style.color]="menuService.selectedMenu == 'contrib' ? 'red' : 'blue'">
       Contributeurs
+    </li> -->
+    
+    <li *ngFor="let menu of menuService.getList('footer')" (click) = "selectMenu(menu.id)"
+      [style.color]="menuService.selectedMenu == menu.id ? 'red' : 'blue'">
+      {{menu.label}}
     </li>
   </ul>
