--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -1,8 +1,8 @@
-ul {
+/* ul {
     display: flex;
     width: 100%;
     justify-content: space-between;
-}
+} */
 
 li {
     list-style-type: none;
